Fix table cell wrap.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -249,6 +249,7 @@ th {
 td {
   padding: 10px;
   border: 1px solid #373737;
+  white-space: nowrap;
  }
 
 form {
